# min_1st_project

./: .gitignore  CMakeLists.txt  README.md  draw_config.json  test.ipynb  test_client.py  test_draw_box01.py  test_server.cpp
src/Cpp/: CMakeLists.txt  draw_server.cpp  draw_server_C.cpp  draw_server_G.cpp  draw_server_G_01.cpp  draw_server_async.cpp  draw_server_async_01.cpp  draw_server_async_01_back.cpp  test_server.cpp
src/python/: draw_client.py  draw_client_C.py  draw_client_G.py  draw_client_G_01.py  draw_client_async.py  draw_client_async_01.py  test_client.py  test_draw_box01.py
